# heterogeneous_parallelization

./: .gitignore  README.md
Assignment 1/: README.md  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
Assignment 2/: README.md  task_2.cpp  task_3.cpp  task_4.cu
Assignment 3/: README.md  task_1.cu  task_2.cu  task_3.cu  task_4.cu  test.cu
Assignment 4/: README.md  task_1.cu  task_2.cu  task_3.cu  task_4.cpp
Practice 1/: README.md  task_3.cpp
Practice 10/: task_1.cpp  task_2.cu  task_3.cu  task_4.cpp
Practice 2/: README.md  task_1.cpp  task_2.cpp  task_3.cpp
Practice 3/: CMakeLists.txt  README.md  pr3_t1.cu  pr3_t2.cu  pr3_t3.cu  pr3_t4.cu
Practice 4/: README.md  task_1.cpp  task_1.cu  task_2.cu  task_3.cu  task_4.cu
Practice 5/: README.md  part_1.cu  part_2.cu
Practice 6/: README.md  task_1_kernel.cl  task_1_opencl_vector_add.cpp  task_1_plot.gp  task_1_results.csv  task_1_vec_add.cpp  task_2_kernel.cl  task_2_opencl_matmul.cpp
Practice 7/: README.md  task_1_reduction.cu  task_2_prefix_sum.cu  task_3_perf_benchmark.cu
Practice 8/: README.md  task_1_openmp_array.cpp  task_2_cuda_array_mul2.cu  task_3_hybrid_cpu_gpu.cu  task_extra_benchmark_sizes.cu  task_extra_cpu_add_gpu_mul.cu
Practice 9/: README.md  task1_std_mpi.cpp  task2_gauss_mpi.cpp  task3_floyd_warshall_mpi.cpp
Practice_10/: README.md
